vrf add consumer and fund subscription

--- a/foundry.toml
+++ b/foundry.toml
@@ -8,4 +8,10 @@ libs = ["lib"]
 
 remappings = [
   '@chainlink/contracts/=lib/chainlink-brownie-contracts/contracts/',
+  '@solmate=lib/solmate/src'
+]
+
+fs_permissions = [
+  {access = "read", path = "./broadcast"},
+  {access = "read", path = "./reports"},
 ]
